--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "@nestjs/common": "^8.2.6",
     "@nestjs/core": "^8.2.6",
     "@nestjs/platform-fastify": "^8.2.6",
+    "@nestjs/swagger": "^5.1.5",
     "@nestjs/typeorm": "^8.0.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.1",
+    "fastify-swagger": "^4.13.1",
     "mysql2": "^2.3.3",
     "rxjs": "^7.5.2",
     "tslib": "^2.3.1",
