--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@nestjs/swagger": "^5.1.5",
     "@nestjs/typeorm": "^8.0.3",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.13.1",
+    "class-validator": "^0.13.2",
     "fastify-swagger": "^4.13.1",
     "mysql2": "^2.3.3",
     "rxjs": "^7.5.2",
@@ -37,6 +37,7 @@
   },
   "devDependencies": {
     "@types/node": "^14.18.9",
+    "@types/validator": "^13.7.1",
     "ts-node": "^10.4.0",
     "tslint": "^6.1.3",
     "typescript": "^4.5.5"
