--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "daly-telecom",
+  "name": "daly-telecom-backend",
   "version": "1.0.0",
   "description": "Daly Telecom",
   "author": "Andrey Sakharov <caxap_8787@mail.ru> (https://www.linkedin.com/in/andrey-sakharov/)",
